# TCMEmbeddingModel

./: .gitignore  README.md  main.py  pyproject.toml
scripts/: convert_to_infonce.py  deploy.sh  deploy_TWCC.sh  deploy_rerank.sh  deploy_reranker.sh  load_data.sh  reranker_api.py  test.py  test_two_stage_retrieval.py  train.sh  train_v2.sh  train_v3.sh  train_v4.sh
